--- a/CarAlgorithm/src/ch/kbw/resources/fxml/home.fxml
+++ b/CarAlgorithm/src/ch/kbw/resources/fxml/home.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" stylesheets="@../stylesheets/carColors.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.SimulationController">
+<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" stylesheets="@../stylesheets/carColors.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.HomeController">
     <children>
       <Label fx:id="l" />
-        <HBox fx:id="playground" alignment="CENTER" prefHeight="325.0" prefWidth="1280.0">
+        <HBox fx:id="playground" alignment="CENTER" prefHeight="325.0" prefWidth="1200.0">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
