--- a/CarAlgorithm/src/ch/kbw/resources/fxml/navigation.fxml
+++ b/CarAlgorithm/src/ch/kbw/resources/fxml/navigation.fxml
@@ -40,7 +40,7 @@
    <center>
       <AnchorPane fx:id="contentPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets top="10.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </BorderPane.margin>
       </AnchorPane>
    </center>
