--- a/CarAlgorithm/src/ch/kbw/resources/fxml/history.fxml
+++ b/CarAlgorithm/src/ch/kbw/resources/fxml/history.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import java.net.URL?>
 
-<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.HomeController">
+<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.HistoryController">
     <children>
         <Label fx:id="l" />
         <HBox fx:id="playground" alignment="CENTER" prefHeight="325.0" prefWidth="1280.0">
@@ -66,12 +66,12 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Slider>
-                <Label alignment="CENTER" prefHeight="241.0" prefWidth="427.0" styleClass="text" text="Fields" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <Label fx:id="amountOfFields" alignment="CENTER" prefHeight="241.0" prefWidth="427.0" styleClass="text" text="Fields" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
+                <Button mnemonicParsing="false" onAction="#handleButtonReset" prefHeight="100.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="20.0" right="20.0" top="30.0" />
                     </GridPane.margin>
