--- a/src/main/resources/views/statistics.fxml
+++ b/src/main/resources/views/statistics.fxml
@@ -4,74 +4,74 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="viewControllers.StatisticsController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <Label styleClass="text" text="Cars in Lane">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-      <Label styleClass="text" text="Average Speed" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-      <Label styleClass="text" text="Spawn Chance" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-      <Label styleClass="text" text="Flea Chance" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-      <Label styleClass="text" text="Ticks passed" GridPane.rowIndex="4">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-      <HBox fx:id="displayField" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-      <Label fx:id="amount" styleClass="text" text="AMOUNT" GridPane.columnIndex="1">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-      <Label fx:id="avgSpeed" styleClass="text" text="AVGSPEED" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-      <Label fx:id="spawnChance" styleClass="text" text="SPAWNCHANCE" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-      <Label fx:id="fleaChance" styleClass="text" text="FLEACHANCE" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-      <Label fx:id="ticks" styleClass="text" text="TICKS" GridPane.columnIndex="1" GridPane.rowIndex="4">
-         <GridPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </GridPane.margin>
-      </Label>
-   </children>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+          prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="viewControllers.StatisticsController">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES"/>
+    </rowConstraints>
     <stylesheets>
-        <URL value="@../styleSheets/styleSheet.css" />
-        <URL value="@../styleSheets/statisticsStyleSheet.css" />
+        <URL value="@../styleSheets/styleSheet.css"/>
+        <URL value="@../styleSheets/statisticsStyleSheet.css"/>
     </stylesheets>
+    <Label styleClass="text" text="Cars in Lane">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <Label styleClass="text" text="Average Speed" GridPane.rowIndex="1">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <Label styleClass="text" text="Spawn Chance" GridPane.rowIndex="2">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <Label styleClass="text" text="Flea Chance" GridPane.rowIndex="3">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <Label styleClass="text" text="Ticks passed" GridPane.rowIndex="4">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <HBox fx:id="displayField" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="5"/>
+    <Label fx:id="amount" styleClass="text" text="0" GridPane.columnIndex="1">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <Label fx:id="avgSpeed" styleClass="text" text="0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <Label fx:id="spawnChance" styleClass="text" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <Label fx:id="fleaChance" styleClass="text" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
+    <Label fx:id="ticks" styleClass="text" text="0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+        <GridPane.margin>
+          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        </GridPane.margin>
+    </Label>
 </GridPane>
