--- a/src/main/resources/views/home.fxml
+++ b/src/main/resources/views/home.fxml
@@ -1,122 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
-
-<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="755.0" prefWidth="1180.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="viewControllers.HomeController">
-    <children>
-      <Label fx:id="label" />
-        <HBox fx:id="playground" alignment="CENTER" prefHeight="200.0" prefWidth="1200.0">
-            <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </padding>
-        </HBox>
-        <GridPane prefHeight="175.0" prefWidth="1280.0">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0" onMouseReleased="#handleChangeTicks" showTickLabels="true" showTickMarks="true" value="2.5" GridPane.rowIndex="1">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Slider>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="600.0" styleClass="text" text="Ticks per second">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Label>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="600.0" styleClass="text" text="Flea Chance" GridPane.columnIndex="1">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Label>
-                <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" onMouseReleased="#handleChangeFlea" prefWidth="5.0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Slider>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="600.0" styleClass="text" text="Spawnchance of a new Car" GridPane.rowIndex="2" />
-                <Slider fx:id="spawnSlider" majorTickUnit="20.0" minorTickCount="0" onMouseReleased="#handleChangeSpawnChance" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.rowIndex="3">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Slider>
-                <Slider fx:id="amountOfFields" max="250.0" min="25.0" minorTickCount="0" onMouseReleased="#handleChangeFields" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Slider>
-                <Label alignment="CENTER" prefHeight="241.0" prefWidth="600.0" styleClass="text" text="Fields" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Label>
-            </children>
-        </GridPane>
-      <GridPane prefHeight="175.0" prefWidth="1180.0">
+<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity"
+      prefHeight="755.0" prefWidth="1180.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="viewControllers.HomeController">
+    <stylesheets>
+        <URL value="@../styleSheets/carColors.css"/>
+        <URL value="@../styleSheets/homeStyleSheet.css"/>
+        <URL value="@../styleSheets/styleSheet.css"/>
+    </stylesheets>
+    <HBox fx:id="playground" alignment="CENTER" prefHeight="200.0" prefWidth="1200.0">
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
+    </HBox>
+    <GridPane prefHeight="175.0" prefWidth="1280.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-         <children>
-            <Label text="Cars in Lane" textFill="#c8c8c8">
-               <GridPane.margin>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-               </GridPane.margin>
-            </Label>
-            <Label fx:id="amountOfCars" text="0" textFill="#c8c8c8" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="Average Speed" textFill="#c8c8c8" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-               </GridPane.margin>
-            </Label>
-            <Label fx:id="avgSpeed" text="0" textFill="#c8c8c8" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="Ticks passed" textFill="#c8c8c8" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-               </GridPane.margin>
-            </Label>
-            <Label fx:id="ticksPassed" text="0" textFill="#c8c8c8" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-               </GridPane.margin>
-            </Label>
-         </children>
-         <VBox.margin>
-            <Insets top="50.0" />
-         </VBox.margin>
-      </GridPane>
-    </children>
-   <stylesheets>
-      <URL value="@../styleSheets/carColors.css" />
-       <URL value="@../styleSheets/homeStyleSheet.css" />
-      <URL value="@../styleSheets/styleSheet.css" />
-   </stylesheets>
+        <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0"
+                onMouseReleased="#handleChangeTicks" showTickLabels="true" showTickMarks="true" value="2.5"
+                GridPane.rowIndex="1">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+        </Slider>
+        <Label alignment="CENTER" prefHeight="17.0" prefWidth="600.0" styleClass="text" text="Ticks per second">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+        </Label>
+        <Label alignment="CENTER" prefHeight="17.0" prefWidth="600.0" styleClass="text" text="Flea Chance"
+               GridPane.columnIndex="1">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+        </Label>
+        <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0"
+                onMouseReleased="#handleChangeFlea" prefWidth="5.0" showTickLabels="true" showTickMarks="true"
+                value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+        </Slider>
+        <Label alignment="CENTER" prefHeight="17.0" prefWidth="600.0" styleClass="text"
+               text="Spawnchance of a new Car" GridPane.rowIndex="2"/>
+        <Slider fx:id="spawnSlider" majorTickUnit="20.0" minorTickCount="0"
+                onMouseReleased="#handleChangeSpawnChance" showTickLabels="true" showTickMarks="true" value="50.0"
+                GridPane.rowIndex="3">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+        </Slider>
+        <Slider fx:id="amountOfFields" max="250.0" min="25.0" minorTickCount="0"
+                onMouseReleased="#handleChangeFields" showTickLabels="true" showTickMarks="true" snapToTicks="true"
+                value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+        </Slider>
+        <Label alignment="CENTER" prefHeight="241.0" prefWidth="600.0" styleClass="text" text="Fields"
+               GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+        </Label>
+    </GridPane>
+    <GridPane prefHeight="175.0" prefWidth="1180.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <VBox.margin>
+            <Insets top="50.0"/>
+        </VBox.margin>
+        <Label text="Cars in Lane" textFill="#c8c8c8">
+            <GridPane.margin>
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+            </GridPane.margin>
+        </Label>
+        <Label fx:id="amountOfCars" text="0" textFill="#c8c8c8" GridPane.columnIndex="1">
+            <GridPane.margin>
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+            </GridPane.margin>
+        </Label>
+        <Label text="Average Speed" textFill="#c8c8c8" GridPane.rowIndex="1">
+            <GridPane.margin>
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+            </GridPane.margin>
+        </Label>
+        <Label fx:id="avgSpeed" text="0" textFill="#c8c8c8" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane.margin>
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+            </GridPane.margin>
+        </Label>
+        <Label text="Ticks passed" textFill="#c8c8c8" GridPane.rowIndex="2">
+            <GridPane.margin>
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+            </GridPane.margin>
+        </Label>
+        <Label fx:id="ticksPassed" text="0" textFill="#c8c8c8" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <GridPane.margin>
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+            </GridPane.margin>
+        </Label>
+    </GridPane>
 </VBox>
