--- a/src/main/resources/views/navigation.fxml
+++ b/src/main/resources/views/navigation.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import java.lang.String?>
 <?import java.net.URL?>
-
 <BorderPane id="navBackground" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="viewControllers.NavigationController">
    <center>
       <AnchorPane fx:id="contentPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -27,49 +20,48 @@
    </stylesheets>
    <top>
       <VBox prefHeight="150.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
-               <children>
-                  <Label id="title" fx:id="title" alignment="CENTER" text="Nagel-Schreckenberg-Modell">
-                     <padding>
-                        <Insets bottom="15.0" left="180.0" right="15.0" top="15.0" />
-                     </padding>
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Label>
-                  <Button mnemonicParsing="false" onAction="#handleButtonStop" prefHeight="40.0" prefWidth="40.0" styleClass="stopButton">
-                     <HBox.margin>
-                        <Insets bottom="14.0" left="7.5" right="7.5" top="14.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#handleButtonPause" prefHeight="40.0" prefWidth="40.0" styleClass="pauseButton">
-                     <HBox.margin>
-                        <Insets bottom="14.0" left="7.5" right="7.5" top="14.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#handleButtonForward" prefHeight="40.0" prefWidth="40.0" styleClass="forwardButton">
-                     <HBox.margin>
-                        <Insets bottom="14.0" left="7.5" right="7.5" top="14.0" />
-                     </HBox.margin>
-                  </Button>
-               </children>
-            </HBox>
-            <HBox prefWidth="200.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#handleButtonHome" prefHeight="35.0" prefWidth="600.0" styleClass="navButton" text="Home" />
-                  <Button mnemonicParsing="false" onAction="#handleButtonHistory" prefHeight="35.0" prefWidth="600.0" text="History">
-                     <styleClass>
-                        <String fx:value="navButton" />
-                        <String fx:value="navButtonR" />
-                     </styleClass>
-                  </Button>
-               </children>
-            </HBox>
-         </children>
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+            <Label id="title" fx:id="title" alignment="CENTER" text="Nagel-Schreckenberg-Modell">
+               <padding>
+                  <Insets bottom="15.0" left="180.0" right="15.0" top="15.0"/>
+               </padding>
+               <font>
+                  <Font size="16.0"/>
+               </font>
+               <HBox.margin>
+                  <Insets/>
+               </HBox.margin>
+            </Label>
+            <Button mnemonicParsing="false" onAction="#handleButtonStop" prefHeight="40.0" prefWidth="40.0"
+                    styleClass="stopButton">
+               <HBox.margin>
+                  <Insets bottom="14.0" left="7.5" right="7.5" top="14.0"/>
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#handleButtonPause" prefHeight="40.0" prefWidth="40.0"
+                    styleClass="pauseButton">
+               <HBox.margin>
+                  <Insets bottom="14.0" left="7.5" right="7.5" top="14.0"/>
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#handleButtonForward" prefHeight="40.0" prefWidth="40.0"
+                    styleClass="forwardButton">
+               <HBox.margin>
+                  <Insets bottom="14.0" left="7.5" right="7.5" top="14.0"/>
+               </HBox.margin>
+            </Button>
+         </HBox>
+         <HBox prefWidth="200.0">
+            <Button mnemonicParsing="false" onAction="#handleButtonHome" prefHeight="35.0" prefWidth="600.0"
+                    styleClass="navButton" text="Home"/>
+            <Button mnemonicParsing="false" onAction="#handleButtonHistory" prefHeight="35.0" prefWidth="600.0"
+                    text="History">
+               <styleClass>
+                  <String fx:value="navButton"/>
+                  <String fx:value="navButtonR"/>
+               </styleClass>
+            </Button>
+         </HBox>
       </VBox>
    </top>
 </BorderPane>
