--- a/src/main/resources/views/notHistory.fxml
+++ b/src/main/resources/views/notHistory.fxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
 <?import java.net.URL?>
 <VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity"
       prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
@@ -13,8 +10,6 @@
         <URL value="@../styleSheets/carColors.css"/>
         <URL value="@../styleSheets/styleSheet.css"/>
     </stylesheets>
-    <children>
-        <Label fx:id="l"/>
-        <VBox fx:id="playgrounds" prefHeight="600.0" prefWidth="1280.0"/>
-    </children>
+    <Label fx:id="l"/>
+    <VBox fx:id="playgrounds" prefHeight="600.0" prefWidth="1280.0"/>
 </VBox>
